--- a/vite-project/Components/Home/Card.css
+++ b/vite-project/Components/Home/Card.css
@@ -1,67 +1,92 @@
-/* App.css */
-body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .app {
-    text-align: center;
-    padding: 2rem;
-    background-color: #f8f8f8;
-  }
-  
-  .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-  }
-  
-  /* Card.css */
-  .card {
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 200px;
-    text-align: left;
-  }
-  
-  .card-header {
-    background-color: #f0f0f0;
-    padding: 0.5rem;
-  }
-  
-  .card-body {
-    padding: 1rem;
-  }
-  
-  .card-body img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-  }
-  
-  .card-body h3 {
-    font-size: 1.2rem;
-    margin: 0.5rem 0;
-  }
-  
-  .card-body a {
-    color: #007bff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .card-body a:hover {
-    text-decoration: underline;
-  }
-  
-  /* Responsive Design */
-  @media (max-width: 768px) {
-    .card-container {
-      flex-direction: column;
-      align-items: center;
-    }
-  }
-  
+/* Card.css */
+.card {
+  position: relative;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 400px; /* Original width */
+  height: 350px; /* Original height */
+  margin-right: 1rem;
+  text-align: left;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, transparent, transparent);
+  z-index: 1;
+  transition: background 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+}
+
+.card:hover::before {
+  background: linear-gradient(45deg, rgba(127, 190, 211, 0.5), rgba(168, 102, 245, 0.5));
+}
+
+.card-header {
+  position: relative;
+  background-color:transparent;
+  padding: 0.7rem;
+  z-index: 2;
+}
+
+.card-header p{
+  font-size: 1.3rem;
+  font-weight: 100;
+  color:grey;
+}
+
+.card-body {
+  position: relative;
+  padding: 1rem;
+  z-index: 2;
+}
+
+.card-body img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.card-body h3 {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+}
+
+/* Card.css */
+
+.card-body {
+  position: relative;
+  padding: 1rem;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-body a {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  margin-top:auto;
+}
+
+
+.card-body a:hover {
+  background-color: #002366;
+  color: #ffffff;
+  width:30%
+}
+
