--- a/vite-project/Components/Home/Home.css
+++ b/vite-project/Components/Home/Home.css
@@ -76,7 +76,7 @@ body {
   font-size: 1rem;
   border: none;
   border-radius: 0 8px 8px 0;
-  background-color: #3572EF;
+  background-color:#050C9C;
   color: white;
   cursor: pointer;
 }
