--- a/vite-project/Components/Home/NavBar.css
+++ b/vite-project/Components/Home/NavBar.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color:#81a6b4;
+  background-color:#CDE8E5;
   padding: 1rem;
 }
 
@@ -17,7 +17,7 @@ body {
 }
 
 .navbar-logo a {
-  color: #fff;
+  color:black;
   font-size: 1.5rem;
   text-decoration: none;
   margin-right: 1rem;
@@ -26,7 +26,7 @@ body {
 .navbar-toggle {
   display: none;
   font-size: 2rem;
-  color: #fff;
+  color:black;
   background: none;
   border: none;
   cursor: pointer;
@@ -44,8 +44,8 @@ body {
 }
 
 .navbar-links .employe a {
-  background-color: #050C9C;
-  color: #fff;
+  background-color:#CDE8E5;
+  color:#050C9C;
   padding: 0.5rem 1rem;
   border-radius: 4px;
 }
@@ -58,8 +58,8 @@ body {
 }
 
 .navbar-links .candidate a:hover{
-  background-color:#050C9C;
-  color:#fff;
+  background-color:#CDE8E5;
+  color: #050C9C;
 }
 
 .navbar-links .employe a:hover {
@@ -70,7 +70,7 @@ body {
 }
 
 .navbar-links a {
-  color: #fff;
+  color:black;
   text-decoration: none;
   padding: 0.5rem 1rem;
 }
