--- a/vite-project/Components/Home/Card.css
+++ b/vite-project/Components/Home/Card.css
@@ -29,7 +29,7 @@
 }
 
 .card:hover::before {
-  background: linear-gradient(45deg, rgba(127, 190, 211, 0.5), rgba(168, 102, 245, 0.5));
+  background: linear-gradient(45deg, rgb(235, 239, 240), rgb(255, 253, 253));
 }
 
 .card-header {
